--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -39,10 +39,139 @@
 
 @Misc{oxfordForecast,
     author = {Oxford University Press},
-    title = Definition of forecast in English},
+    title = {Definition of forecast in English},
     note = {\url{https://en.oxforddictionaries.com/definition/forecast}, Accessed December 2018},
 }
 
+@book{boxjenkins,
+    author = {George E. P. Box, Gwilym M. Jenkins, Gregory C. Reinsel, Greta M. Ljung},
+    title = {Time Series Analysis: Forecasting and Control, 5th Edition},
+    date = {June 2015},
+}
+
+@Misc{fpp2nonseasonalarima,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Non-seasonal ARIMA models},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/non-seasonal-arima.html}, Accessed December 2018},
+}
+
+@Misc{fpp2seasonalarima,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Seasonal ARIMA models},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/seasonal-arima.html}, Accessed December 2018},
+}
+
+@Misc{hyndmanseasonalperiods,
+    author = {Rob J Hyndman},
+    title = {Seasonal periods},
+    date = {November 2014},
+    note = {\url{https://robjhyndman.com/hyndsight/seasonal-periods/}, Accessed December 2018},
+}
+
+@Misc{hyndmanarimax,
+    author = {Rob J Hyndman},
+    title = {The ARIMAX model muddle},
+    date = {October 2010},
+    note = {\url{https://robjhyndman.com/hyndsight/arimax/}, Accessed December 2018},
+}
+@Misc{fpp2dhr,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Dynamic harmonic regression},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/dhr.html}, Accessed December 2018},
+}
+
+
+@Misc{berkleysarimamodels,
+    author = {Arturo Fernandez},
+    title = {SARIMA models},
+    date = {2017},
+    note = {\url{https://www.stat.berkeley.edu/~arturof/Teaching/STAT248/lab07_part1.html}, Accessed December 2018},
+}
+
+@Misc{nauarimax,
+    author = {Robert Nau},
+    title = {ARIMA models with regressors},
+    date = {June 2018},
+    note = {\url{https://people.duke.edu/~rnau/arimreg.htm}, Accessed December 2018},
+}
+
+@Misc{fpp2arimax,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Regression with ARIMA errors in R},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/regarima.html}, Accessed December 2018},
+}
+
+@Misc{fpp2usefulpredictors,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Some useful predictors},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/useful-predictors.html}, Accessed December 2018},
+}
+
+@article{automatictimeseriesforecasting,
+    author = {Hyndman, Rob and Khandakar, Yeasmin},
+    year = {2008},
+    month = {07},
+    pages = {},
+    title = {Automatic Time Series Forecasting: The forecast Package for R},
+    volume = {26},
+    journal = {Journal of Statistical Software},
+    doi = {10.18637/jss.v027.i03}
+}
+
+@article{markovpersonmovement,
+    author = {Gellert, Arpad and Vintan, Lucian},
+    year = {2006},
+    month = {03},
+    pages = {17-30},
+    title = {Person Movement Prediction Using Hidden Markov Models},
+    volume = {15},
+    journal = {Studies in Informatics and Control}
+}
+
+@article{pedrocoimbra,
+    author = {T.C. Pedro, Hugo and F.M. Coimbra, Carlos},
+    year = {2012},
+    month = {07},
+    pages = {2017-2028},
+    title = {Assessment of forecasting techniques for solar power production with no exogenous inputs},
+    volume = {86},
+    journal = {Solar Energy},
+    doi = {10.1016/j.solener.2012.04.004}
+}
+
+@article{ding2011ann,
+    title={An ANN-based approach for forecasting the power output of photovoltaic system},
+    author={Ding, Ming and Wang, Lei and Bi, Rui},
+    journal={Procedia Environmental Sciences},
+    volume={11},
+    pages={1308--1315},
+    year={2011},
+    publisher={Elsevier}
+}
+
+@book{kahneman2011thinking,
+    title={Thinking, Fast and Slow},
+    author={Kahneman, D.},
+    isbn={9781429969352},
+    url={https://books.google.ro/books?id=ZuKTvERuPG8C},
+    year={2011},
+    publisher={Farrar, Straus and Giroux}
+}
+
+@Misc{fpp2simplemethods,
+    author = {Rob J Hyndman and George Athanasopoulos},
+    title = {Some simple forecasting methods},
+    date = {December 2018},
+    note = {\url{https://otexts.org/fpp2/simple-methods.html}, Accessed December 2018},
+}
+
+
+\begin{comment}
 @Misc{retarget,
 author = {Erich Styger},
 title = {printf() and scanf() with {GNU ARM Libraries}},
@@ -368,3 +497,4 @@ author = {Interpol},
 title = {Cybercrime},
 note = {\url{https://www.interpol.int/Crime-areas/Cybercrime/Cybercrime}, Accesat ianuarie 2017},
 }
+\end{comment}
